trunk/Archive2/06/956e449b44eee3/output
main.cpp:4:54: error: ‘CUnitDISTANCE_METER’ has not been declared
 #define UNIT_UNIT_TYPE_CLASS_NAME2(basic_type, name) CUnit ## basic_type ## _ ## name
                                                      ^
main.cpp:9:53: note: in expansion of macro ‘UNIT_UNIT_TYPE_CLASS_NAME2’
 #define UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name) UNIT_UNIT_TYPE_CLASS_NAME2(basic_type, name)
                                                     ^
main.cpp:12:16: note: in expansion of macro ‘UNIT_UNIT_TYPE_CLASS_NAME’
 CUnitAbstract& UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name)::dup(){\
                ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp: In function ‘CUnitAbstract& dup()’:
main.cpp:4:54: error: ‘CUnitDISTANCE_METER’ was not declared in this scope
 #define UNIT_UNIT_TYPE_CLASS_NAME2(basic_type, name) CUnit ## basic_type ## _ ## name
                                                      ^
main.cpp:9:53: note: in expansion of macro ‘UNIT_UNIT_TYPE_CLASS_NAME2’
 #define UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name) UNIT_UNIT_TYPE_CLASS_NAME2(basic_type, name)
                                                     ^
main.cpp:13:1: note: in expansion of macro ‘UNIT_UNIT_TYPE_CLASS_NAME’
 UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name) * n = new UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name)(this->value);\
 ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:13:47: error: ‘n’ was not declared in this scope
 UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name) * n = new UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name)(this->value);\
                                               ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:4:54: error: expected type-specifier before ‘CUnitDISTANCE_METER’
 #define UNIT_UNIT_TYPE_CLASS_NAME2(basic_type, name) CUnit ## basic_type ## _ ## name
                                                      ^
main.cpp:9:53: note: in expansion of macro ‘UNIT_UNIT_TYPE_CLASS_NAME2’
 #define UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name) UNIT_UNIT_TYPE_CLASS_NAME2(basic_type, name)
                                                     ^
main.cpp:13:55: note: in expansion of macro ‘UNIT_UNIT_TYPE_CLASS_NAME’
 UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name) * n = new UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name)(this->value);\
                                                       ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp: At global scope:
main.cpp:4:54: error: ‘CUnitDISTANCE_METER’ has not been declared
 #define UNIT_UNIT_TYPE_CLASS_NAME2(basic_type, name) CUnit ## basic_type ## _ ## name
                                                      ^
main.cpp:9:53: note: in expansion of macro ‘UNIT_UNIT_TYPE_CLASS_NAME2’
 #define UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name) UNIT_UNIT_TYPE_CLASS_NAME2(basic_type, name)
                                                     ^
main.cpp:16:16: note: in expansion of macro ‘UNIT_UNIT_TYPE_CLASS_NAME’
 CUnitAbstract& UNIT_UNIT_TYPE_CLASS_NAME(basic_type, name) ::operator+(CUnitAbstract& value){\
                ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp: In function ‘CUnitAbstract& operator+(CUnitAbstract&)’:
main.cpp:3:43: error: ‘CUnitDISTANCE’ does not name a type
 #define UNIT_BASIC_UNIT_CLASS_NAME2(name) CUnit ## name
                                           ^
main.cpp:8:42: note: in expansion of macro ‘UNIT_BASIC_UNIT_CLASS_NAME2’
 #define UNIT_BASIC_UNIT_CLASS_NAME(name) UNIT_BASIC_UNIT_CLASS_NAME2(name)
                                          ^
main.cpp:17:30: note: in expansion of macro ‘UNIT_BASIC_UNIT_CLASS_NAME’
 DYNAMIC_ASSERT(dynamic_cast< UNIT_BASIC_UNIT_CLASS_NAME(basic_type) *>(&value) != NULL);\
                              ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:17:69: error: expected ‘>’ before ‘*’ token
 DYNAMIC_ASSERT(dynamic_cast< UNIT_BASIC_UNIT_CLASS_NAME(basic_type) *>(&value) != NULL);\
                                                                     ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:17:69: error: expected ‘(’ before ‘*’ token
 DYNAMIC_ASSERT(dynamic_cast< UNIT_BASIC_UNIT_CLASS_NAME(basic_type) *>(&value) != NULL);\
                                                                     ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:17:70: error: expected primary-expression before ‘>’ token
 DYNAMIC_ASSERT(dynamic_cast< UNIT_BASIC_UNIT_CLASS_NAME(basic_type) *>(&value) != NULL);\
                                                                      ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:17:83: error: ‘NULL’ was not declared in this scope
 DYNAMIC_ASSERT(dynamic_cast< UNIT_BASIC_UNIT_CLASS_NAME(basic_type) *>(&value) != NULL);\
                                                                                   ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:18:24: error: invalid use of ‘this’ in non-member function
 CUnitAbstract * tmp = &this->dup();\
                        ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:19:8: error: invalid use of ‘this’ in non-member function
 *tmp = this->value + conversionTable[UNIT_BASIC_UNIT_DEF(basic_type)][UNIT_UNIT_TYPE_DEF(basic_type, name)] * value.getInBasicUnit();return *tmp;\
        ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:19:22: error: ‘conversionTable’ was not declared in this scope
 *tmp = this->value + conversionTable[UNIT_BASIC_UNIT_DEF(basic_type)][UNIT_UNIT_TYPE_DEF(basic_type, name)] * value.getInBasicUnit();return *tmp;\
                      ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:6:30: error: ‘name’ was not declared in this scope
 #define UNIT_BASIC_UNIT_DEF (name) UNIT_BASIC_UNIT_DEF2(name)
                              ^
main.cpp:19:38: note: in expansion of macro ‘UNIT_BASIC_UNIT_DEF’
 *tmp = this->value + conversionTable[UNIT_BASIC_UNIT_DEF(basic_type)][UNIT_UNIT_TYPE_DEF(basic_type, name)] * value.getInBasicUnit();return *tmp;\
                                      ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp:1:37: error: expected ‘]’ before ‘UNIT_BASIC_name’
 #define UNIT_BASIC_UNIT_DEF2 (name) UNIT_BASIC_ ## name
                                     ^
main.cpp:6:36: note: in expansion of macro ‘UNIT_BASIC_UNIT_DEF2’
 #define UNIT_BASIC_UNIT_DEF (name) UNIT_BASIC_UNIT_DEF2(name)
                                    ^
main.cpp:19:38: note: in expansion of macro ‘UNIT_BASIC_UNIT_DEF’
 *tmp = this->value + conversionTable[UNIT_BASIC_UNIT_DEF(basic_type)][UNIT_UNIT_TYPE_DEF(basic_type, name)] * value.getInBasicUnit();return *tmp;\
                                      ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
main.cpp: In function ‘CUnitAbstract& dup()’:
main.cpp:15:1: warning: control reaches end of non-void function [-Wreturn-type]
 }\
 ^
main.cpp:23:1: note: in expansion of macro ‘UNIT_IMPLEMENT_UNIT_TYPE’
 UNIT_IMPLEMENT_UNIT_TYPE(DISTANCE, METER)
 ^
